--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
       <version>8.0.32</version>
     </dependency>
 
-    <!-- JUnit   -->
+    <!-- JUnit -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -57,6 +57,14 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
+    </dependency>
+
+    <!-- JetBrains Annotations -->
+    <dependency>
+        <groupId>org.jetbrains</groupId>
+        <artifactId>annotations</artifactId>
+        <version>24.0.1</version>
+        <scope>compile</scope>
     </dependency>
 
   </dependencies>
