--- a/project.toml
+++ b/project.toml
@@ -1,7 +1,12 @@
 [project]
 name = "Library Loans System"
 main_function = "winchester.library.Main.main"
-version = "1.2.0.470"
+
+[project.version]
+major = 1
+minor = 0
+revision = 2
+build = 518
 
 [java]
 jdk = "openjdk 17.0.6 lts"
