Added test directory.

--- a/project.toml
+++ b/project.toml
@@ -12,6 +12,7 @@ microsoft = [ "visual studio code",]
 [structure]
 source_dir = "src/main/java/**"
 resources_dir = "src/main/resources/**"
+test_dir = "test/java/**"
 build_dir = "target"
 
 [git]
