Added export directory.

--- a/project.toml
+++ b/project.toml
@@ -15,6 +15,7 @@ resources_dir = "src/main/resources/**"
 test_dir = "test/java/**"
 build_dir = "target"
 docs_dir = "docs"
+program_exports = "exports"
 
 [git]
 visibility = "private"
